# MLOps-TestBed

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
docs/: IMPROVEMENTS.md  LIFECYCLE.md  UV_AND_DOCKER_COMPOSE.md  WSL_SETUP.md
infra/envs/dev/cloudbuild/: terragrunt.hcl
infra/envs/prod/cloudbuild/: terragrunt.hcl
infra/terraform/envs/dev/: main.tf
infra/terraform/modules/cloud_run_service/: main.tf
infra/terraform/modules/cloudbuild_trigger/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/gcs_bucket/: main.tf
infra/terragrunt/dev/: terragrunt.hcl
train/: train.py
